--- a/app/views/mypage/concerts/new.html.slim
+++ b/app/views/mypage/concerts/new.html.slim
@@ -1,2 +1,3 @@
-= form_with model: [:mypage, @concert], scope: :concerts, html: { data: {remote: false} } do |f|
-  = render 'form', f: f
+.N-Main-Right
+  = form_with model: [:mypage, @concert], scope: :concerts, html: { data: {remote: false} } do |f|
+    = render 'form', f: f
