--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,265 +1,38 @@
-a {
-  text-decoration: none;
+.N-Login{
   width: 100%;
-  height: 100%;
-}
-
-#sample{
-  width: 70%;
   height: 100vh;
+  background-image:linear-gradient(rgba(0, 0, 0,0.7),rgba(0, 0, 0, 0.7)), image-url('shibuya.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #fff;
 }
 
-.N-Global-HeaderItems{
-  width: 100%;
-  height: 100%;
-  background-color: #FFC400;
+.N-Login-Contents{
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 120px;
 }
 
-.N-Global-HeaderTitle{
-  font-family: Avenir Next Condensed;
-  width: 100%;
-  height: 50px;
-  color: black;
+.N-LoginTitle{
+  font-weight: 900;
+  font-size: 60px;
   letter-spacing: 2.0px;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
-.N-Global-Menu{
-  width: 100%;
-  height: 80px;
-  display: flex;
-  align-items: center;
-}
-
-.N-Global-MenuItems{
-  max-width: 1000px;
-  width: 900px;
-  height: 100%;
-  font-weight: bold;
-  font-size: 15px;
-  list-style: none;
-  padding: 0;
-  margin: 0 0 0 150px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.N-Global-MenuItems-Mypage{
-  margin-left: 150px;
-  line-height: 0.7em;
-}
-
-.N-Global-MenuItems-Mypage a{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #000;
-}
-
-.N-Global-MenuItems-Mypage img{
-  width: 50px;
-  height: 50px;
-  border-radius: 50px;
-}
-
-.N-MenuItems-Description{
-  font-size: 20px;
-  font-weight: bold;
-  margin-left: 20px;
-}
-
-.N-MenuItems-Description span:first-child {
-  display: block;
-  font-size: 15px;
-}
-
-.N-Global-MenuItems li:first-child a{
-  color: #FF8539;
-}
-
-.N-Main-Item a{
-  color: #fff;
-  display: flex;
-  align-items: center;
-}
-
-.Current {
-  border: 3px solid black;
-  border-radius: 50px;
-  padding: 10px 20px;
-  justify-content: center;
-  align-items: center;
-}
-
-
-.N-Global-MenuItems a{
-  color: #333;
-}
-
-.N-Main{
-  width: 100%;
-  height: calc(100% - 150px);
-  display: flex;
-  align-items: center;
-}
-
-.N-Main-Contents{
-  width: 30%;
-  height: 100vh;
-  background-color: #2C2C2C;
-  overflow: scroll;
-}
-
-.N-Main-Title{
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 50px 0 50px 0;
-}
-
-.N-Main-Items{
-  width: 100%;
-  height: 500px;
-  color: #fff;
+.N-LoginForm{
+  margin: 150px auto 80px auto;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 
-.N-Main-Item{
-  font-size: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 50px;
-}
-
-.N-Main-Item-Image{
-  width: 70px;
-  height: 70px;
-  border-radius: 50px;
-  margin-right: 20px;
-}
-
-.N-Main-Item-Description::first-line {
-  font-size: 20px;
-}
-
-.N-Main-Item-Plan{
-  margin-right: 40px;
-}
-
-.N-Main-Item-Plan a{
-  color: #fff;
-  font-size: 25px;
-  margin-right: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.N-Main-Head {
-  position: relative;
-  font-weight: bold;
-  background-color: #fff;
-  width: 60%;
-  height: 40px;
-  line-height: 40px;
-  border: 3px solid #fff;
-  border-radius: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 50px auto;
-  text-align: center;
-}
-
-.N-Main-Head a{
-  color: #000;
-}
-
-.N-arrow {
-  width: 8px;
-  height: 8px;
-  position: absolute;
-  left: 65px;
-  bottom: 15px;
-  border-top: 3px solid #000;
-  border-left: 3px solid #000;
-  transform: rotate(-45deg);
-}
-
-.N-Main-Item-Description2 a {
-  color: #000;
-  font-weight: bold;
+.N-LoginForm span{
   display: block;
-}
-
-.N-Main-Balloon{
-  background: #fff;
-  font-weight: bold;
-  width: 350px;
-  height: 230px;
-  position: relative;
-  margin: 80px auto 0 auto;
-  border-radius: 10%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.N-Main-Balloon::after{
-  width: 30px;
-  height: 30px;
-  background-color: #fff;
-  position: absolute;
-  bottom: -5px;
-  left: 50%;
-  transform: rotate(45deg);
-  margin-left: -20px;
-  content: "";
-  display: block;
-}
-
-.N-Main-Artist{
-  color: #fff;
-  font-weight: bold;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.N-Main-img{
-  width: 160px;
-  height: 160px;
-  border-radius: 50%;
-  margin-top: 30px;
-}
-
-.N-Main-ArtistInformation{
-  font-size: 30px;
-  line-height: 1.4em;
-  margin: 30px auto 20px auto;
-  text-align: center;
-}
-
-.M-Main-ArtistInformation p{
-  margin: 0;
-}
-
-.N-Main-ArtistInformation span:first-child{
-  display: block;
-  font-size: 15px;
+  margin-bottom: 15px;
 }
